[package]
name = "tww"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
log = "0.4.21"
snafu = { version = "0.8.2", features = ["futures"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
wgpu = { version = "0.20.0", default-features = false, features = [
    "vulkan-portability",
] }
winit = "0.30.0"
egui-winit = { git = "https://github.com/vadixidav/egui.git", branch = "allow-external" }
egui-wgpu = { git = "https://github.com/vadixidav/egui.git", branch = "allow-external", features = [
    "winit",
] }
egui = { git = "https://github.com/vadixidav/egui.git", branch = "allow-external" }
parking_lot = "0.12.3"
raw-window-handle = "0.6.2"
ahash = "0.8.11"

[dev-dependencies]
bytemuck = { version = "1.16.0", default-features = false }
nanorand = { version = "0.7.0", default-features = false, features = [
    "wyrand",
] }
pretty_env_logger = "0.5.0"
